[GEOS-10941] Update ErrorProne to 2.18